# codereviewai

./: Dockerfile  README.md  docker-compose.yaml  lets.yaml  pyproject.toml
app/: cache.py  configs.py  enums.py  exceptions.py  http_client.py  logger.py  main.py  models.py  usecase.py
app/interceptors/: __init__.py  abc.py  logging.py  retry.py
app/interceptors/retry_strategies/: __init__.py  abc.py  default.py  rate_limit.py
app/services/: __init__.py  abc.py  github_service.py  openai_service.py
app/tests/: test_cache.py  test_functionality.py
