[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Mykyta Bondarenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
